# coingecko_non_rt_etl_pipeline

./: .env  .gitignore  .user.yml  README.md  SETUP.md  alembic.ini  dbt_project.yml  profiles.yml  pyproject.toml
csv_outputs/: part_one_coin_mapping_table.csv  part_one_prices_table.csv  part_one_query_prices.csv
database_management/: env.py  tables.py
database_management/versions/: 79633f42fd8c_create_tables.py
models/: query_prices.sql
sql/: create_database.sql  ddl.sql
src/etl/: batcher.py  database_access_objects.py  etl_pipeline.py  extractors.py  transformers.py
src/exceptions/: coingecko_client_error.py
src/models/coingecko_models/: data_models.py
